@@ -7,7 +7,7 @@
 
 .onLoad <- function(lib,pkg) {
 	require(methods)
-	cat("FLCore 3.0 \"\"\n")
+	cat("FLCore 3.0 \"$Id$\"\n")
   cat("------------------------------------\n")
 }
 
